# twitch-1337

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  config.toml.example
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  data-refresh.yml  docker.yml  sast.yml
crates/core/: Cargo.toml
crates/core/data/: 7tv_emotes.toml  airlines.csv
crates/core/data/prompts/: ai_instructions.md  dreamer.md  seed_soul.md  system.md
crates/core/src/: config.rs  cooldown.rs  lib.rs  llm_factory.rs  ping.rs  suspend.rs
crates/core/src/ai/: command.rs  doener_tool.rs  mod.rs
crates/core/src/ai/content/: executor.rs  media.rs  mod.rs  tools.rs
crates/core/src/ai/memory/: frontmatter.rs  inject.rs  ritual.rs  sanitize.rs  store.rs  tools.rs  transcript.rs  types.rs
crates/core/src/aviation/: formatting.rs  location.rs  mod.rs  tracker.rs  types.rs
crates/core/src/aviation/commands/: flights.rs  flights_above.rs  mod.rs  up.rs
crates/core/src/commands/: doener.rs  doener_calc.rs  doeneratlas.rs  feedback.rs  leaderboard.rs  mod.rs  news.rs  pb.rs  ping_admin.rs  ping_trigger.rs
crates/core/src/doener/: atlas.rs  client.rs  format.rs  mod.rs  types.rs
crates/core/src/settings/: audit.rs  mod.rs  overrides.rs  store.rs
crates/core/src/twitch/: mod.rs  setup.rs  seventv.rs
crates/core/src/twitch/handlers/: commands.rs  latency.rs  mod.rs  router.rs  spawn.rs  tracker_1337.rs  transcript.rs
crates/core/src/util/: mod.rs  persist.rs  telemetry.rs
crates/core/tests/: ai.rs  ai_channel.rs  aviation.rs  doener.rs  feedback.rs  flight_tracker.rs  grok.rs  leaderboard.rs  memory_v2.rs  news.rs  pb.rs  ping.rs  smoke.rs  suspend.rs  tracker_1337.rs  web_smoke.rs
crates/core/tests/common/: fake_clock.rs  fake_llm.rs  fake_transport.rs  irc_line.rs  mod.rs  test_bot.rs
crates/llm/src/: agent.rs  lib.rs  ollama.rs  openai.rs  types.rs
crates/twitch-1337/: Cargo.toml  config.toml.example
crates/twitch-1337/data/prompts/: ai_instructions.md
crates/twitch-1337/src/: config.rs  database.rs  lib.rs  main.rs  ping.rs
crates/twitch-1337/src/ai/: command.rs  mod.rs  session.rs
crates/twitch-1337/src/ai/content/: client.rs  detect.rs  executor.rs  media.rs
crates/twitch-1337/src/ai/memory/: inject.rs  mod.rs  ritual.rs  tools.rs
crates/twitch-1337/src/ai/web_search/: executor.rs
crates/twitch-1337/src/aviation/: client.rs  tracker.rs
crates/twitch-1337/src/aviation/commands/: track.rs
crates/twitch-1337/src/twitch/: seventv.rs
crates/twitch-1337/src/twitch/handlers/: commands.rs  schedules.rs  tracker_1337.rs
crates/twitch-1337/tests/: ai.rs  pb.rs
crates/twitch-1337/tests/common/: test_bot.rs
crates/web/: Cargo.toml  build.rs
crates/web/assets/: app.css  app.js  htmx.min.js  pico.min.css
crates/web/src/: clock.rs  config.rs  dev.rs  error.rs  flash.rs  helix.rs  lib.rs  nav.rs  state.rs
crates/web/src/auth/: csrf.rs  mod.rs  mod_check.rs  role.rs  role_check.rs  routes.rs  session.rs
crates/web/src/routes/: assets.rs  flights.rs  health.rs  leaderboard.rs  memory.rs  mod.rs  pings.rs  settings.rs  stubs.rs
crates/web/templates/: base.html  settings.html  sidebar.html  stub.html
crates/web/templates/auth/: denied.html  login.html  oauth_failed.html
crates/web/templates/flights/: list.html
crates/web/templates/leaderboard/: list.html
crates/web/templates/memory/: conflict.html  editor.html  state_list.html  tree.html  users_list.html  users_new.html
crates/web/templates/pings/: form.html  list.html
crates/web/tests/: assets_smoke.rs  auth_csrf.rs  auth_mod_check.rs  auth_next.rs  auth_owner.rs  auth_routes.rs  auth_session.rs  auth_signed_cookies.rs  auth_viewer_guard.rs  auth_viewer_tier.rs  flights_route.rs  healthz.rs  helix_pagination.rs  leaderboard_route.rs  memory_read.rs  memory_write.rs  pings_routes.rs  settings_route.rs  sidebar_smoke.rs
crates/web/tests/helpers/: mod.rs
data/: 7tv_emotes.toml  plz.csv
docs/superpowers/plans/: 2026-03-23-fastest-1337.md  2026-03-24-latency-monitor.md  2026-03-24-random-flight-command.md  2026-03-24-up-command.md  2026-03-30-commands-refactor.md  2026-04-08-iata-to-icao-translation.md  2026-04-08-public-pings.md  2026-04-10-ai-conversation-context.md  2026-04-10-ai-persistent-memory.md  2026-04-18-ci-cd-workflows.md  2026-04-18-e2e-tests.md  2026-04-24-ai-memory-rework.md  2026-04-25-cacheable-memory-rendering.md  2026-04-27-module-reorg.md  2026-05-08-read-url-tool.md  2026-05-09-web-dashboard.md  2026-05-11-donerpreisindex.md  2026-05-12-dashboard-viewer-tier.md
docs/superpowers/specs/: 2026-03-24-latency-monitor-design.md  2026-03-24-random-flight-command-design.md  2026-03-24-up-command-design.md  2026-03-25-cone-visibility-filter-design.md  2026-03-25-up-location-resolver-design.md  (+15 more)
scripts/: cone_chart.py  generate_airlines_csv.sh  update-airports.py  update-plz.py
src/: aviation.rs  chat_history.rs  config.rs  cooldown.rs  database.rs  flight_tracker.rs  lib.rs  main.rs  memory.rs  openrouter.rs  ping.rs  prefill.rs  storage.rs  streamelements.rs  token_storage.rs  twitch_setup.rs  util.rs
src/ai/: command.rs  mod.rs
src/ai/llm/: ollama.rs  (+1 more)
src/aviation/: mod.rs  tracker.rs
src/commands/: ai.rs  feedback.rs  flights.rs  flights_above.rs  grok.rs  leaderboard.rs  mod.rs  news.rs  ping_admin.rs  ping_trigger.rs  random_flight.rs  suspend.rs  track.rs  untrack.rs
src/handlers/: commands.rs  latency.rs  mod.rs  router.rs  schedules.rs  tracker_1337.rs
src/llm/: mod.rs  ollama.rs  openai.rs
src/memory/: consolidation.rs  extraction.rs  scope.rs  store.rs  tools.rs
src/twitch/: mod.rs  setup.rs  seventv.rs  tls.rs  token_storage.rs  whisper.rs
src/util/: clock.rs  mod.rs  persist.rs
src/web_search/: cache.rs  client.rs  executor.rs  mod.rs  tools.rs
tests/: ai.rs  flight_tracker.rs  grok.rs  leaderboard.rs  memory_integration.rs  news.rs  ping.rs  smoke.rs  suspend.rs  tracker_1337.rs
tests/common/: fake_clock.rs  fake_llm.rs  irc_line.rs  mod.rs  test_bot.rs
(+17 files in other folders)
