[package]
name = "twitch-1337"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
testing = []

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
chrono-tz = { version = "0.10.4", features = ["filter-by-regex"] }
color-eyre = "0.6"
rand = "0.9.3"
ron = "0.12.1"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "time",
  "fs",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twitch-irc = { version = "6.0.0", default-features = false, features = [
  "refreshing-token-rustls-webpki-roots",
  "transport-tcp-rustls-webpki-roots",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls-webpki-roots",
] }
eyre = "0.6.12"
tracing-error = "0.2.1"
toml = "0.9.11"
notify-debouncer-mini = "0.7"
random-flight = { git = "https://github.com/Chronophylos/random-flight.git" }
csv = "1.4.0"

[dev-dependencies]
twitch-1337 = { path = ".", features = ["testing"] }
tempfile = "3"
wiremock = "0.6"
serial_test = "3"
tokio = { version = "1.52.1", features = ["test-util"] }
async-trait = "0.1"
bytes = "1"
either = "1"
futures-util = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[lints.clippy]
cast_lossless = "warn"
implicit_clone = "warn"
needless_continue = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
