[workspace]
resolver = "3"
members = ["crates/twitch-1337", "crates/llm"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["now", "serde"], default-features = false }
chrono-tz = { version = "0.10.4", features = ["filter-by-regex"] }
color-eyre = "0.6"
csv = "1.4.0"
eyre = "0.6.12"
notify-debouncer-mini = "0.7"
rand = "0.10.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
ron = "0.12.1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
schemars = { version = "1.2", features = ["derive"] }
scraper = "0.26"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
toml = "1.1.2"
tracing = "0.1"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.clippy]
cast_lossless = "warn"
implicit_clone = "warn"
needless_continue = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"

[patch.crates-io]
twitch-irc = { path = "crates/twitch-1337/vendor/twitch-irc" }
