[package]
name = "twitch-1337"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
testing = []

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
color-eyre = { workspace = true }
csv = { workspace = true }
eyre = { workspace = true }
futures-util = { workspace = true }
infer = { workspace = true }
llm = { path = "../llm" }
notify-debouncer-mini = { workspace = true }
random-flight = { git = "https://github.com/Chronophylos/random-flight.git", rev = "261c2ba4a53770b51fbfb1ab93a806027eaf4fdf" }
rand = { workspace = true }
reqwest = { workspace = true }
ron = { workspace = true }
rustls = { workspace = true }
schemars = { workspace = true }
scraper = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
twitch-irc = { version = "6.0", default-features = false, features = [
  "refreshing-token-rustls-webpki-roots",
  "transport-tcp-rustls-webpki-roots",
] }

[dev-dependencies]
twitch-1337 = { path = ".", features = ["testing"] }
async-trait = "0.1"
bytes = "1"
either = "1"
proptest = "1.11"
serial_test = "3"
tempfile = "3"
tokio = { version = "1.52.1", features = ["test-util"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
wiremock = "0.6"

[lints]
workspace = true
