[package]
name = "twitch-1337-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
twitch-1337-core = { path = "../core" }
askama = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
http = "1"
mime_guess = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rust-embed = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-cookies = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
tower-livereload = { version = "0.10", optional = true }
notify-debouncer-mini = { version = "0.7", optional = true }

[features]
# Mounts `/_dev/login` on the public router for local development. NEVER
# compile this into a production binary — anyone reaching the bind addr
# can mint a moderator session without OAuth.
dev-login = ["dep:tower-livereload", "dep:notify-debouncer-mini"]

# Standalone dashboard runner — skips IRC, uses StubHelix.
# `cargo run -p twitch-1337-web --bin web-dev --features dev-login`
[[bin]]
name = "web-dev"
path = "src/bin/web_dev.rs"
required-features = ["dev-login"]

[dev-dependencies]
rustls = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
wiremock = { workspace = true }

[lints]
workspace = true
